fix(android): keep Brain runtime API 26 compatible