@@ -5,18 +5,19 @@ import org.json.JSONObject;
 import org.junit.Test;
 
 import java.util.Set;
+import java.util.Collections;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
 public class BrainFeedStateTest {
     @Test
-    public void changedTerminalLifecycleNotifiesAtMostOncePerRevision() {
+    public void changedTerminalLifecycleNotifiesAtMostOncePerRevision() throws Exception {
         JSONObject feed = feed("rev-1", new JSONObject()
                 .put("notification_id", "notice-1").put("kind", "task")
                 .put("stable_id", "amin:task:1").put("lifecycle_status", "waiting_owner")
                 .put("title", "任務一"));
-        BrainFeedState.Delta first = BrainFeedState.diff(feed, Set.of());
+        BrainFeedState.Delta first = BrainFeedState.diff(feed, Collections.emptySet());
         assertEquals(1, first.newNotifications().size());
         BrainFeedState.Delta second = BrainFeedState.diff(feed, first.seenNotificationIds());
         assertEquals(0, second.newNotifications().size());
@@ -24,17 +25,17 @@ public class BrainFeedStateTest {
     }
 
     @Test
-    public void ignoresNonTerminalAndMalformedNotifications() {
+    public void ignoresNonTerminalAndMalformedNotifications() throws Exception {
         JSONObject feed = feed("rev-2",
                 new JSONObject().put("notification_id", "running")
                         .put("stable_id", "amin:run:1").put("lifecycle_status", "running"),
                 new JSONObject().put("stable_id", "amin:run:2").put("lifecycle_status", "failed"));
-        BrainFeedState.Delta delta = BrainFeedState.diff(feed, Set.of());
+        BrainFeedState.Delta delta = BrainFeedState.diff(feed, Collections.emptySet());
         assertTrue(delta.newNotifications().isEmpty());
     }
 
     @Test
-    public void capabilityRuntimeSummaryIsVisibleWithoutChangingFeedV1() {
+    public void capabilityRuntimeSummaryIsVisibleWithoutChangingFeedV1() throws Exception {
         JSONObject feed = feed("rev-capability").put("capability_runtime", BrainJson.object(
                 "capabilities", new JSONArray().put(BrainJson.object("capability_id", "android:ui")),
                 "certifications", new JSONArray().put(BrainJson.object("status", "active")),
@@ -46,7 +47,7 @@ public class BrainFeedStateTest {
         assertTrue(summary.contains("訓練通過：2"));
     }
 
-    private static JSONObject feed(String revision, JSONObject... notifications) {
+    private static JSONObject feed(String revision, JSONObject... notifications) throws Exception {
         JSONArray values = new JSONArray();
         for (JSONObject notification : notifications) values.put(notification);
         return new JSONObject().put("format", "amin-brain-mobile-feed").put("version", 1)
